--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "pully": "^2.7.0",
     "request": "^2.88.2",
+    "socket.io": "^4.1.2",
     "youtube-dl-exec": "^1.2.4",
     "ytdl-core": "^4.8.3"
   }
